- Bug Fix (1015): Update daqd,nds build for ldas-tools 2.5
- Add leap second to dataviewer for Dec. 31, 2016
- Bug Fix (1047): EDCU code that supports dual data concentrators was modified to work 
  with new mx_stream introduced in 3.1
- Bug Fix: Corrected initialization for fixed and set phase oscillators at model start.
==================================================================================================
Changes for 3.2
==================================================================================================
- Bug Fix (1033): Daqd frame writer changes:
  Split the producer thread into multiple parts to free up a thread to only receive data.
  Split the raw frame writer thread into two compoments to allow it to catch up better to
  when there is a slow down on frame writes.
  Cleaned up some of the EPICS code.
  Added more EPICS channels to give metrics on daqd.
  	- Add leap second to dataviewer leapsecs.txt file for 12-31-16
	- Bug Fix (1010): Prevent divide-by-zero error in daqd filesys.hh
	- Bug Fix (1047): EDCU code that supports dual data concentrators was modified to work
	  with new mx_stream introduced in 3.1
	- Bug Fix: Corrected initialization for fixed and set phase oscillators at model start.

==================================================================================================
Changes for 3.1.1
==================================================================================================
- Bug Fix for loading of RampMuxMatrix on startup (1030).
==================================================================================================
Changes for 3.1
==================================================================================================
- Per ECR LIGO-E1600234, modified front end daq code to run without any fast channels. Previously,
  DAQ required minimum of 2 channels at full rate.  This resulted in a lot of useless DAQ data