@@ -1803,7 +1803,7 @@ udelay(1000);
 	  if(ipcErrBits & 0xf) feStatus |= FE_ERROR_IPC;
 	  // Create FB status word for return to EPICS
 	  mxStat = 0;
-	  mxDiagR = daqPtr->status;
+	  mxDiagR = daqPtr->reqAck;
 	  if((mxDiag & 1) != (mxDiagR & 1)) mxStat = 1;
 	  if((mxDiag & 2) != (mxDiagR & 2)) mxStat += 2;
 #ifdef DUAL_DAQ_DC
